--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 	    <img class="img-fluid1 img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.png" alt="" />
                 	   </div>
                 	   <div class="col-md-8"><br><br><br>
-                	     <h1 class="mb-0">Ashraful <span class="text-primary">Islam</span></h1>
+                	     <h1 class="mb-0">Md. Ashraful <span class="text-primary">Islam</span></h1>
                 	     <div class="subheading mb-5">Programmer | Tech Enthusiast | Traveller<br><ion-icon name="location"></ion-icon><span class="text-primary">  Dhaka, Bangladesh</span></div>
 
                 	   </div>
@@ -143,7 +143,7 @@
             <hr class="m-0" />
             <section class="resume-section" id="experiance">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Experiance</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
