--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
                 	    <img class="img-fluid1 img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.png" alt="" />
                 	   </div>
                 	   <div class="col-md-8"><br><br><br>
-                	     <h1 class="mb-0">Md. Ashraful <span class="text-primary">Islam</span></h1>
+                	     <h2 class="mb-0">Md. Ashraful <span class="text-primary">Islam</span></h2>
                 	     <div class="subheading mb-5">Programmer | Tech Enthusiast | Traveller<br><ion-icon name="location"></ion-icon><span class="text-primary">  Dhaka, Bangladesh</span></div>
 
                 	   </div>
                 	 </div>
                 	<br>
                     <p class="lead mb-2">Hello and welcome!</p>
-                    <p class="lead mb-4">I am Md. Ashraful Islam, and I'm thrilled to have you here. Let me take a moment to share a little about myself. <br>
-                        I began my educational journey in the quaint town of Tangail, Bangladesh. I completed my Secondary education at Vebekananda High School, Tangail, 
+                    <p class="lead mb-4">I am <span class="font-weight-bold">Md. Ashraful Islam</span>, and I'm thrilled to have you here. Let me take a moment to share a little about myself. <br><br>
+                        I am from Tangail, Bangladesh, where I spent my early years. I completed my Secondary education at Vebekananda High School, Tangail, 
                         and continued to pursue my Higher Secondary education at Sristy College, Tangail. The scenic surroundings and the nurturing environment of Tangail 
                         played a significant role in shaping my academic foundation.
                         <br>
@@ -351,7 +351,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contacts</h2>
                     <div class="col-md-8"><br><br><br>
-                      <h3 class="mb-3">Md. Ashraful <span class="text-dark">Islam</span></h1>
+                      <h3 class="mb-3">Md. Ashraful <span class="text-dark">Islam</span></h3>
                       <div class="subheading mb-2"><ion-icon name="location"></ion-icon><span class="text-dark">  Dhaka, Bangladesh</span></div>
                       <div class="subheading mb-2"><ion-icon name="call-outline"></ion-icon><span class="text-dark">  +8801765848689</span></div>
                       <div class="subheading mb-2"><ion-icon name="mail-open-outline"></ion-icon><span class="text-dark"><a href="ashrafulislam.mbstu123@gmail.com">  ashrafulislam.mbstu123@gmail.com</a></span></div>
